--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "General Sans";
 }
 
 html,body{
@@ -17,5 +18,37 @@ html,body{
     width:100%;
     height: 100vh;
     background-color: black;
+    color: #fff;
 }
+
+#nav{
+    width: 100%;
+    padding: 2vw 4vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#nav a{
+    color: white;
+    text-decoration: none;
+    font-size: 1.2vw;
+}
+
+#heading h1{
+    font-family: "General Sans Medium" ;   
+    font-size: 9.5vw;
+    text-transform: uppercase;
+    font-weight: 550;
+    line-height: 1;
+    opacity: 0.6;
+    margin-left: 7vh
+}
+
+#heading h5{
+    text-transform: uppercase;
+}
+
+
+
 
