--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,84 @@ html,body{
     font-weight: 500;
 }
 
+/* SECOND PAGE STYLINGs */
+#secondpage{
+    color: white;
+    width: 100%;
+    height: 200vh;
+    background-color: #000;
+    padding-top: 18vh;
+    padding-right: 10vw;
+}
+
+.elem{
+    position: relative;
+    width: 100%;
+    border-top: 1px solid #888;
+    padding: 3.5vw 3vw;
+    padding-right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.elem h1{
+    text-transform: uppercase;
+    font-size: 7vw;
+    opacity: 0.7;
+}
+
+.elemlast{
+    border-bottom: 1px solid #888;
+}
+
+.elem img{
+    position: absolute;
+    z-index: 999;
+    height: 140%;
+    display: none;
+}
+
+#about{
+    color: #fff;
+    width: 100%;
+    padding: 10vw 5vw;
+    padding-left: 35vw;
+    background-color: #000;
+    display: flex;
+    align-items: center;
+    gap: 5vw;
+}
+
+#textabout{
+    width: 30rem;
+}
+
+#textabout h5{
+    opacity: 0.6;
+    margin-bottom: 10px;
+}
+
+#textabout p{
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
+
+#textabout a{
+    font-size: 1rem;
+    text-decoration: none;
+    color: white;
+    border: 1px solid white;
+    padding: 10px 20px;
+    border-radius: 30px;
+}
+
+#about img{
+    width: 200px;
+}
+
+
+
 
 
 
