--- a/styles.css
+++ b/styles.css
@@ -126,8 +126,9 @@ html,body{
     position: relative;
     width: 100%;
     border-top: 1px solid #888;
+    margin-left: 3vw;
     padding: 3.5vw 3vw;
-    padding-right: 0;
+    padding-right: 2vw; 
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -135,7 +136,7 @@ html,body{
 
 .elem h1{
     text-transform: uppercase;
-    font-size: 7vw;
+    font-size: 6.5vw;
     opacity: 0.7;
 }
 
@@ -149,6 +150,80 @@ html,body{
     height: 140%;
     display: none;
 }
+
+#secondpage a{
+    font-size: 0.8rem;
+    text-decoration: none;
+    color: white;
+    border: 1px solid white;
+    padding: 7px 20px;
+    border-radius: 30px;
+}
+
+#view{
+    margin-top: 45px;
+    margin-left: 3vw;
+}
+
+/* scroller section styling  */
+#scroller{
+    width: 100%;
+    height: 70vh;
+    background-color: #000000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2vw;
+    
+}
+
+#scroller {
+  width: 100%;
+  height: 70vh;
+  background-color: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+#scrollimages {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  border-top: 1px solid #888;
+  border-bottom: 1px solid #888;
+  height: 25vh;
+  display: flex;
+  align-items: center;
+}
+
+.scrolltrack {
+  display: flex;
+  width: max-content;
+  animation: scroll-left 30s linear infinite;
+}
+
+.scrolltrack img {
+  height: 100%;
+  padding: 0 3vw;
+  object-fit: contain;
+}
+
+@keyframes scroll-left {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+
+
+
+
+/* about section styling */
 
 #about{
     color: #fff;
