--- a/styles.css
+++ b/styles.css
@@ -155,7 +155,7 @@ html,body{
     font-size: 0.8rem;
     text-decoration: none;
     color: white;
-    border: 1px solid white;
+    border: 0.1vw solid white;
     padding: 7px 20px;
     border-radius: 30px;
 }
@@ -177,28 +177,30 @@ html,body{
   overflow: hidden;
 }
 
-#scrollimages {
+#scrollimages{
   width: 100%;
   overflow: hidden;
   position: relative;
-  border-top: 1px solid #888;
-  border-bottom: 1px solid #888;
+  border-top: 0.1vw solid #888;
+  border-bottom: 0.1vw solid #888;
   height: 25vh;
   display: flex;
   align-items: center;
 }
 
-.scrolltrack {
+.scrolltrack{
   display: flex;
   width: max-content;
-  animation: scroll-left 30s linear infinite;
+  animation: scroll-left 20s linear infinite;
 }
 
-.scrolltrack img {
+.scrolltrack img{
   height: 100%;
   padding: 0 3vw;
   object-fit: contain;
 }
+
+/* animation  */
 
 @keyframes scroll-left {
   0% {
@@ -208,10 +210,6 @@ html,body{
     transform: translateX(-50%);
   }
 }
-
-
-
-
 
 /* about section styling */
 
@@ -227,7 +225,7 @@ html,body{
 }
 
 #textabout{
-    width: 30rem;
+    width: 26.5rem;
 }
 
 #textabout h5{
@@ -238,14 +236,15 @@ html,body{
 #textabout p{
     line-height: 1.5;
     margin-bottom: 20px;
+    font-size: 1.2vw;
 }
 
 #textabout a{
-    font-size: 1rem;
+    font-size: 0.9rem;
     text-decoration: none;
     color: white;
     border: 1px solid white;
-    padding: 10px 20px;
+    padding: 5px 20px;
     border-radius: 30px;
 }
 
@@ -253,6 +252,56 @@ html,body{
     width: 200px;
 }
 
+/* subscribe section styling  */
+#subscribe{
+    background-color: #000000;
+    width: 100%;
+    height: 27vh;
+    color: #fff;
+    padding: 3vw 3vw;
+    text-transform: uppercase;
+}
+
+#subscribe h5{
+    opacity: 0.7;
+    font-size: 0.9vw;;
+}
+
+#subscribe a{
+    text-decoration: none;
+    color: #fff;
+    font-weight: 500;
+    font-size: 1.1vw;
+}
+
+/* footer section styling */
+#footer {
+    color: #fff;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2vw 3vw;
+}
+
+#footerleft {
+    display: flex;
+    gap: 2vw;
+    font-size: 1.1vw;
+}
+
+#footerright {
+    display: flex;
+    gap: 2.5vw;
+}
+
+#footer a {
+    text-transform: uppercase;
+    font-size: 1.1vw;
+    font-weight: 500;
+    color: #fff;
+    text-decoration: none;
+}
 
 
 
