--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ html,body{
 
 #main{
     width: 100%;
+    background-color: #000000;
 }
 
 #hero{
@@ -19,6 +20,7 @@ html,body{
     height: 100vh;
     background-color: black;
     color: #ffffff;
+    position: relative;
 }
 
 #nav{
