--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,18 @@ html,body{
     width: 100%;
 }
 
+/* small circle cursor styling  */
+#minicircle{
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    z-index: 99999;
+    border-radius: 50%;
+    background-color: #fff;
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
+}
+
+/* header styling */
 #main{
     width: 100%;
     background-color: #000000;
